--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,14 +6,13 @@ services:
       dockerfile: Dockerfile
     container_name: genggam-makna-backend-api
     env_file:
-      - /etc/secrets/genggam-makna-backend-api.env
+      - /opt/secrets/genggam-makna-backend-api.env
     ports:
       - "8001:8001"
     networks:
       - nginx
     volumes:
-      - /etc/secrets:/etc/secrets
-      - /var/run/docker.sock:/var/run/docker.sock
+      - /opt/secrets:/opt/secrets
     command:
       ["./genggam-makna-backend-api"]
 
