--- a/.github/workflows/build-production.yml
+++ b/.github/workflows/build-production.yml
@@ -44,6 +44,9 @@ jobs:
           chmod 600 private_key
 
       - name: Remove old Docker image
+        env:
+          VM_USER: ${{ secrets.VM_USER }}
+          VM_HOST: ${{ secrets.VM_HOST }}
         run: |
           ssh -o StrictHostKeyChecking=no -i private_key ${VM_USER}@${VM_HOST} "sudo docker rmi -f ${{ secrets.DOCKER_USERNAME }}/genggam-makna-backend-api:v1 || true"
           ssh -o StrictHostKeyChecking=no -i private_key ${VM_USER}@${VM_HOST} "sudo docker rmi -f ${{ secrets.DOCKER_USERNAME }}/genggam-makna-backend-api:${{ github.sha }} || true"
